2002-07-14 Ales Hvezda   <ahvezda@geda.seul.org>

	* src/convert_sym.awk, convert_sym.c, gmk_sym.c, sarlacc_schem.c, 
	sarlacc_sym:  Changed all user visible references of uref to
	refdes.

	* gsymupdate, gschupdate: Added code to convert uref= to refdes=
	
	* gsymupdate, gschupdate: Bunch of code to make these programs
	a lot more robust and useful.
	
2002-07-07 Ales Hvezda   <ahvezda@geda.seul.org>

	* src/gsymupdate, gschupdate: Added simple perl scripts to convert
	existing symbols and schematics to use the new attribute conventions

2002-07-06 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.in/Makefile.am: Upgraded to automake 1.6.2

2002-05-15 Chris Ellec <chris @ gtx.seul.org>

     * src/gmk_sym.c: Added a couple of data verifications
     to avoid seg faults when the input file has errors.

2002-04-08 Ales Hvezda   <ahvezda@geda.seul.org>

	* src/gmk_sym.c: Fixed a #ifndef to be MINGW32 correct 

2002-04-03 Ales Hvezda   <ahvezda@geda.seul.org>

	* configure.in and friends: More work on getting the upgrade of 
	autoconf, automake, and libtool to behave correctly.

	* configure.in: Added PATHSEP variable which holds the proper path
	separater depending on the platform.

	* lib/system-*.in: Work on getting rc files to use above variable.

2002-02-02 Ales Hvezda   <ahvezda@geda.seul.org>

	* src/sarlacc_schem.c: Put in placed the updated files from 
	Dave Lawrence.  Bug fixes
	
2001-07-22 Ales Hvezda   <ahvezda@geda.seul.org>

	* src/char_width.c: Added patch by Dan Mcmahill for 64-bit 
	  architectures.

2001-07-19 Ales Hvezda   <ahvezda@geda.seul.org>

	* configure.in: Bumped up version to 20010722

	* configure.in: More updates to get cygwin to build right

2001-07-01 Ales Hvezda   <ahvezda@geda.seul.org>

	* configure.in: Make sure configure scripts work with autoconf-2.50
	  (had to fix cygwin check), they do not yet work with 2.50

	* Cleaned up all the auto* related files to be current and not stale
