@@ -1,0 +1,11 @@
+## Process this file with automake to produce Makefile.in
+
+bin_SCRIPTS = sarlacc_sym gschupdate gsymupdate
+
+EXTRA_DIST = convert_sym.awk gpstoimage mk_char_tab.pl sarlacc_sym
+
+MOSTLYCLEANFILES = *.log *.ps core FILE *~
+CLEANFILES = *.log *.ps core FILE *~ 
+DISTCLEANFILES = *.log core FILE *~ prototype.bak
+MAINTAINERCLEANFILES = *.log *.ps core FILE *~  Makefile.in configure
+
