@@ -1,3 +1,9 @@
+2002-07-27 Ales Hvezda   <ahvezda@geda.seul.org>
+
+	* scripts/: Created new directory for non-compiled utils
+
+	* src/*: Moved non-compiled utils to scripts directory
+
 2002-07-14 Ales Hvezda   <ahvezda@geda.seul.org>
 
 	* src/convert_sym.awk, convert_sym.c, gmk_sym.c, sarlacc_schem.c, 
